fix footer spacing on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,9 @@ article {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 50px;
-  line-height: 50px; /* Vertically center the text there */
+  min-height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #f5f5f5;
 }
